# ServerMockup

./: .gitlab-ci.yml  CMakeLists.txt  README.md
configs/: WatchdogServer.xml  dummy_server_input.xml  dummy_server_mapping.xml
include/: DummyServer.h  ServerMockup.h  XMLParser.h
src/: DummyServer.cc  ServerMockup.cc  XMLParser.cc  applicationInstance.cc
test/: testCounter.C  test_parsing.C
